liquibase setup;test cases

--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,7 +1,7 @@
 # HSQL Settings
 
 jdbc.driverClassName=org.hsqldb.jdbcDriver
-jdbc.url=jdbc:hsqldb:mem:grocerystore
+jdbc.url=jdbc:hsqldb:mem:grocerystore;DB_CLOSE_ON_EXIT=FALSE;
 jdbc.username=sa
 jdbc.password=
 
