--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,16 @@
 			<version>${hsqldb.version}</version>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>3.4.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.193</version>
+        </dependency>
     </dependencies>
     <build>
         <defaultGoal>clean install</defaultGoal>
@@ -138,6 +148,14 @@
 					</execution>
 				</executions>
 			</plugin>
-        </plugins>
+            <plugin>
+                <groupId>org.liquibase</groupId>
+                <artifactId>liquibase-maven-plugin</artifactId>
+                <version>3.4.1</version>
+                <configuration>                  
+                    <propertyFile>src/main/resources/liquibase.properties</propertyFile>
+                </configuration>                
+            </plugin> 
+            </plugins>
     </build>
 </project>
