single method test cases

--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,12 +1,12 @@
 # HSQL Settings
 
 jdbc.driverClassName=org.hsqldb.jdbcDriver
-jdbc.url=jdbc:hsqldb:mem:grocerystore;DB_CLOSE_ON_EXIT=FALSE;
+jdbc.url=jdbc:hsqldb:mem:grocerystore
 jdbc.username=sa
 jdbc.password=
 
 # Properties that control the population of schema and data for a new data source
-#jdbc.initLocation=classpath:db/hsqldb/initDB.sql
+jdbc.initLocation=classpath:initDB.sql
 #jdbc.dataLocation=classpath:db/hsqldb/populateDB.sql
 
 # Property that determines which database to use with an AbstractJpaVendorAdapter
