spring profiles added

--- a/src/main/resources/config/db/hsql.properties
+++ b/src/main/resources/config/db/hsql.properties
@@ -1,17 +1,16 @@
 # HSQL Settings
-
-jdbc.driverClassName=org.hsqldb.jdbcDriver
-jdbc.url=jdbc:hsqldb:mem:grocerystore
-jdbc.username=sa
-jdbc.password=
+hsql.jdbc.driverClassName=org.hsqldb.jdbcDriver
+hsql.jdbc.url=jdbc:hsqldb:mem:grocerystore
+hsql.jdbc.username=sa
+hsql.jdbc.password=
 
 # Properties that control the population of schema and data for a new data source
 #jdbc.initLocation=classpath:initDB.sql
 #jdbc.dataLocation=classpath:db/hsqldb/populateDB.sql
 
 # Property that determines which database to use with an AbstractJpaVendorAdapter
-jpa.database=HSQL
+hsql.jpa.database=HSQL
 
-jpa.showSql=true
+hsql.jpa.showSql=true
 
-jpa.generateDdl=true
+hsql.jpa.generateDdl=true
