--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,12 @@
             <artifactId>h2</artifactId>
             <version>1.4.193</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.0.0</version>
+        </dependency>
     </dependencies>
     <build>
         <defaultGoal>clean install</defaultGoal>
@@ -143,7 +149,7 @@
 					</execution>
 				</executions>
 			</plugin>
-		<plugin>
+	       	<plugin>
            		 <groupId>org.apache.maven.plugins</groupId>
          		   <artifactId>maven-dependency-plugin</artifactId>
        			     <version>2.3</version>
