--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,23 +3,27 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
-   <servlet>
+   <!--<servlet>
           <servlet-name>H2Console</servlet-name>
          <servlet-class>org.h2.server.web.WebServlet</servlet-class>
          <init-param>
            <param-name>webAllowOthers</param-name>
            <param-value></param-value>
         </init-param>
-    <init-param>
-        <param-name>trace</param-name>
-        <param-value></param-value>
-    </init-param>
-    <load-on-startup>1</load-on-startup>
-</servlet>
-<servlet-mapping>
-    <servlet-name>H2Console</servlet-name>
-    <url-pattern>/db/*</url-pattern>
-</servlet-mapping>   
+        <init-param>
+            <param-name>trace</param-name>
+            <param-value></param-value>
+            </init-param>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>H2Console</servlet-name>
+        <url-pattern>/db/*</url-pattern>
+    </servlet-mapping>-->   
+    <context-param>
+    <param-name>spring.profiles.active</param-name>
+        <param-value>jpa-pgsql,javee</param-value>
+    </context-param>
     <session-config>
         <session-timeout>
             30
