--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -22,7 +22,7 @@
     </servlet-mapping>-->   
     <context-param>
     <param-name>spring.profiles.active</param-name>
-        <param-value>jpa-pgsql,javee</param-value>
+        <param-value>jpa-pgsql,javaee</param-value>
     </context-param>
     <context-param>
         <param-name>contextConfigLocation</param-name>
@@ -35,7 +35,7 @@
     </listener> 
     <resource-ref>
         <description>postgreSQL Datasource example</description>
-        <res-ref-name>jdbc/postgres</res-ref-name>
+        <res-ref-name>java:comp/env/jdbc/grocerystore</res-ref-name>
         <res-type>javax.sql.DataSource</res-type>
         <res-auth>Container</res-auth>
     </resource-ref>
