--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,11 +3,28 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
-       <servlet>
-           <servlet-name>springapp</servlet-name>
+    
+    <display-name>Grocery Store</display-name>
+    <description>Grocery Store application</description>   
+     <context-param>
+        <param-name>spring.profiles.active</param-name>
+        <param-value>jpa-pgsql,javaee</param-value>
+    </context-param>
+   
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
+    
+     <servlet>
+           <servlet-name>store</servlet-name>
            <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-             <load-on-startup>1</load-on-startup>
+            <init-param>
+              <param-name>contextConfigLocation</param-name>
+              <param-value>/WEB-INF/applicationContext.xml</param-value>
+              <load-on-startup>1</load-on-startup>
+             </init-param>
       </servlet>
+       
     
       <servlet-mapping>
            <servlet-name>store</servlet-name>
@@ -16,28 +33,10 @@
     
       <welcome-file-list>
         <welcome-file>
-          index.jsp
+          hello.jsp
         </welcome-file>
       </welcome-file-list> 
-    <context-param>
-    <param-name>spring.profiles.active</param-name>
-        <param-value>jpa-pgsql,javaee</param-value>
-    </context-param>
-    <context-param>
-        <param-name>contextConfigLocation</param-name>
-        <param-value>/WEB-INF/applicationContext.xml</param-value>
-    </context-param>
-    <listener>
-        <listener-class>
-        org.springframework.web.context.ContextLoaderListener
-        </listener-class>
-    </listener> 
-    <resource-ref>
-        <description>postgreSQL Datasource example</description>
-        <res-ref-name>java:comp/env/jdbc/grocerystore</res-ref-name>
-        <res-type>javax.sql.DataSource</res-type>
-        <res-auth>Container</res-auth>
-    </resource-ref>
+      
     <session-config>
         <session-timeout>
             30
