--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,15 +8,15 @@
     <description>Grocery Store application</description>   
      <context-param>
         <param-name>spring.profiles.active</param-name>
-        <param-value>javaee,jpa-pgsql</param-value>
+        <param-value>jpa-pgsql</param-value>
     </context-param>
    <context-param>  
        <param-name>spring.profiles.default</param-name>  
-        <param-value>javaee,jpa-pgsql</param-value>  
+        <param-value>jpa-pgsql</param-value>  
     </context-param>
     <context-param>  
         <param-name>spring.liveBeansView.mbeanDomain</param-name>  
-        <param-value>javaee,jpa-pgsql</param-value>  
+        <param-value>jpa-pgsql</param-value>  
     </context-param>  
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
