--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 		<hsqldb.version>2.3.2</hsqldb.version>
 		<spring.version>4.3.7.RELEASE</spring.version>
 		<spring.web.version>4.1.4.RELEASE</spring.web.version>
+		<postgresql.version>9.4.1211</postgresql.version>
     </properties>
     <dependencyManagement>
 		<dependencies>
@@ -118,7 +119,7 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>9.4-1200-jdbc41</version>
+            <version>${postgresql.version}</version>
              <scope>runtime</scope>
         </dependency>
 
@@ -152,6 +153,18 @@
             <artifactId>hibernate-validator</artifactId>
             <version>5.1.3.Final</version>
             <scope>test</scope>
+        </dependency>
+       <!-- https://mvnrepository.com/artifact/jstl/jstl -->
+        <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+             <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>0.7.4</version>
         </dependency>
     </dependencies>
     <build>
@@ -210,6 +223,11 @@
                                     <groupId>org.postgresql</groupId>
                                     <artifactId>postgresql</artifactId>
                                     <version>9.4-1200-jdbc41</version>
+                         	   </artifactItem>
+                         	   <artifactItem>
+                         	        <groupId>jstl</groupId>
+                                    <artifactId>jstl</artifactId>
+                                    <version>1.2</version>
                          	   </artifactItem>
                        		 </artifactItems>
                   		  </configuration>
