--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
 language: java
-
 jdk:
 
   - oraclejdk8
-
+test:
+  override:
+    - mvn clean verify
+  post:
+    - mkdir -p $CIRCLE_TEST_REPORTS/junit/
+    - find . -type f -regex ".*/target/*-reports/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
 after_success:
 
   - bash <(curl -s https://codecov.io/bash) -t 3ba481f1-903c-4cee-90cd-a51f143aefa2
