renamed Order as StoreOrder, test cases added

--- a/src/main/resources/config/db/h2/hsql.properties
+++ b/src/main/resources/config/db/h2/hsql.properties
@@ -1,6 +1,6 @@
 # HSQL Settings
 hsql.jdbc.driverClassName=org.hsqldb.jdbcDriver
-hsql.jdbc.url=jdbc:hsqldb:mem:grocerystore;DB_CLOSE_DELAY=-1
+hsql.jdbc.url=jdbc:hsqldb:mem:grocerystore;create=true
 hsql.jdbc.username=sa
 hsql.jdbc.password=
 
@@ -9,7 +9,7 @@ hsql.jdbc.password=
 #jdbc.dataLocation=classpath:config/db/hsql/populateDB.sql
 
 # Property that determines which database to use with an AbstractJpaVendorAdapter
-hsql.jpa.database=H2
+hsql.jpa.database=HSQL
 
 hsql.jpa.showSql=true
 
