--- a/src/main/resources/config/db/h2/hsql.properties
+++ b/src/main/resources/config/db/h2/hsql.properties
@@ -1,6 +1,6 @@
 # HSQL Settings
 hsql.jdbc.driverClassName=org.hsqldb.jdbcDriver
-hsql.jdbc.url=jdbc:hsqldb:mem:grocerystore;create=true
+hsql.jdbc.url=jdbc:hsqldb:mem:grocerystore
 hsql.jdbc.username=sa
 hsql.jdbc.password=
 
