--- a/src/main/resources/config/db/h2/hsql.properties
+++ b/src/main/resources/config/db/h2/hsql.properties
@@ -7,7 +7,7 @@ hsql.jdbc.password=
 # Properties that control the population of schema and data for a new data source
 #jdbc.initLocation=classpath:config/db/hsqlinitDB.sql
 #jdbc.dataLocation=classpath:config/db/hsql/populateDB.sql
-
+hsql.hibernate.dialect=org.hibernate.dialect.H2Dialect
 # Property that determines which database to use with an AbstractJpaVendorAdapter
 hsql.jpa.database=HSQL
 
