--- a/src/main/resources/config/db/h2/hsql.properties
+++ b/src/main/resources/config/db/h2/hsql.properties
@@ -1,12 +1,13 @@
 # HSQL Settings
 hsql.jdbc.driverClassName=org.hsqldb.jdbcDriver
-hsql.jdbc.url=jdbc:hsqldb:mem:grocerystore
+hsql.jdbc.url=jdbc:hsqldb:mem:grocerystore;DB_CLOSE_DELAY=-1
 hsql.jdbc.username=sa
 hsql.jdbc.password=
 
 # Properties that control the population of schema and data for a new data source
-#jdbc.initLocation=classpath:config/db/hsqlinitDB.sql
-#jdbc.dataLocation=classpath:config/db/hsql/populateDB.sql
+hsql.jdbc.initLocation=classpath:config/db/h2/initDB.sql
+hsql.jdbc.dataLocation=classpath:config/db/h2/populateDB.sql
+
 hsql.hibernate.dialect=org.hibernate.dialect.H2Dialect
 # Property that determines which database to use with an AbstractJpaVendorAdapter
 hsql.jpa.database=HSQL
