--- a/pom.xml
+++ b/pom.xml
@@ -340,6 +340,29 @@
 					</execution>
 				</executions>
 			</plugin>
+			 <plugin>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>3.0.2</version>
+                <executions>
+                  <execution>
+                    <id>copy-resources</id>
+                    <!-- here the phase you need -->
+                    <phase>validate</phase>
+                    <goals>
+                      <goal>copy-resources</goal>
+                    </goals>
+                    <configuration>
+                      <outputDirectory>${basedir}/target/dependency</outputDirectory>
+                      <resources>          
+                        <resource>
+                          <directory>src/main/resources/META-INF/</directory>
+                          <filtering>true</filtering>
+                        </resource>
+                      </resources>              
+                    </configuration>            
+                  </execution>
+                </executions>
+              </plugin>
 	       	<plugin>
            		 <groupId>org.apache.maven.plugins</groupId>
          		   <artifactId>maven-dependency-plugin</artifactId>
