delete function in html

--- a/src/main/resources/config/db/postgresql/pgsql.properties
+++ b/src/main/resources/config/db/postgresql/pgsql.properties
@@ -15,6 +15,6 @@ pgsql.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # Property that determines which database to use with an AbstractJpaVendorAdapter
 pgsql.jpa.database=POSTGRESQL
 
-pgsql.jpa.showSql=true
+pgsql.jpa.showSql=false
 
-pgsql.jpa.generateDdl=true
+pgsql.jpa.generateDdl=false
