--- a/pom.xml
+++ b/pom.xml
@@ -304,6 +304,12 @@
                <groupId>com.heroku.sdk</groupId>
                 <artifactId>heroku-maven-plugin</artifactId>
                 <version>1.1.3</version>
+                <configuration>
+                <appName>grocerystore-1.0</appName>
+                <processTypes>
+                    <web>java $JAVA_OPTS -cp 'target/dependency/*' webapp.runner.launch.Main target/*.war --enable-naming --port $PORT</web>
+                </processTypes>
+            </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
