--- a/pom.xml
+++ b/pom.xml
@@ -404,7 +404,7 @@
                          	   <artifactItem>
                                     <groupId>org.postgresql</groupId>
                                     <artifactId>postgresql</artifactId>
-                                    <version>9.4-1200-jdbc41</version>
+                                    <version>${postgresql.version}</version>
                          	   </artifactItem>
                          	   <artifactItem>
                          	        <groupId>jstl</groupId>
