test cases fixed

--- a/src/main/resources/config/db/h2/hsql.properties
+++ b/src/main/resources/config/db/h2/hsql.properties
@@ -1,6 +1,6 @@
 # HSQL Settings
 hsql.jdbc.driverClassName=org.hsqldb.jdbcDriver
-hsql.jdbc.url=jdbc:hsqldb:mem:grocerystore;DB_CLOSE_DELAY=-1
+hsql.jdbc.url=jdbc:hsqldb:mem:grocerystore;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=TRUE;
 hsql.jdbc.username=sa
 hsql.jdbc.password=
 
@@ -8,7 +8,7 @@ hsql.jdbc.password=
 hsql.jdbc.initLocation=classpath:config/db/h2/initDB.sql
 hsql.jdbc.dataLocation=classpath:config/db/h2/populateDB.sql
 
-hsql.hibernate.dialect=org.hibernate.dialect.H2Dialect
+hsql.hibernate.dialect=org.hibernate.dialect.HSQLDialect
 # Property that determines which database to use with an AbstractJpaVendorAdapter
 hsql.jpa.database=HSQL
 
