--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,12 @@
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-context</artifactId>
                 <version>${spring.version}</version>
+                <exclusions>
+                    <exclusion>
+                      <artifactId>commons-logging</artifactId>
+                      <groupId>commons-logging</groupId>
+                    </exclusion>
+                  </exclusions>
             </dependency>
             <dependency>
                 <groupId>org.apache.tomcat</groupId>
