--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,68 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
-         version="3.1">
-    
-    <display-name>Grocery Store</display-name>
-    <description>Grocery Store application</description>
-          
-    <listener>
-        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-    </listener>
-  
-     <context-param>
-        <param-name>spring.profiles.active</param-name>
-        <param-value>javaee,jpa-pgsql</param-value>
-    </context-param>
-   <context-param>  
-       <param-name>spring.profiles.default</param-name>  
-        <param-value>javaee,jpa-pgsql</param-value>  
-    </context-param>
-    <context-param>  
-        <param-name>spring.liveBeansView.mbeanDomain</param-name>  
-        <param-value>javaee,jpa-pgsql</param-value>  
-    </context-param>  
-    
-     <context-param>
-        <param-name>contextConfigLocation</param-name>
-        <param-value>/WEB-INF/applicationContext.xml</param-value>
-     </context-param>
-     <!-- Spring security -->
-    <filter>
-        <filter-name>springSecurityFilterChain</filter-name>
-        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-    </filter>
-    <filter-mapping>
-        <filter-name>springSecurityFilterChain</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
+<web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee"
+		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
+  http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
+
+	<!--
+	  - Location of the XML file that defines the root application context
+	  - Applied by ContextLoaderListener.
+	  -->
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>
+			/WEB-INF/applicationContext.xml
+		</param-value>
+	</context-param>
 
 
-     <servlet>
-           <servlet-name>mvc</servlet-name>
-           <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-            <init-param>
-              <param-name>contextConfigLocation</param-name>
-              <param-value>/WEB-INF/applicationContext.xml</param-value>
-             </init-param>
-      </servlet>
-    
-      <servlet-mapping>
-           <servlet-name>mvc</servlet-name>
-           <url-pattern>/</url-pattern>
-      </servlet-mapping>
-      
- 
-    <session-config>
-        <session-timeout>
-            30
-        </session-timeout>
-    </session-config>
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
+	<!--
+	  - Loads the root application context of this web app at startup.
+	  - The application context is then available via
+	  - WebApplicationContextUtils.getWebApplicationContext(servletContext).
+	-->
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+
     <resource-ref>
         <description>DB Connection</description>
         <res-ref-name>jdbc/grocerystore</res-ref-name>
         <res-type>javax.sql.DataSource</res-type>
         <res-auth>Container</res-auth>
     </resource-ref>
+   
 </web-app>
